manifests/prow/components/2b_deck_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deck
  labels:
    app: deck
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: "deck"
      terminationGracePeriodSeconds: 30
      containers:
      - name: deck
        image: gcr.io/k8s-prow/deck:v20190711-664ef040d
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
        args:
        - --hook-url=http://hook:8888/plugin-help
        - --config-path=/etc/config/config.yaml
        - --spyglass=false
        volumeMounts:
        - name: prow-config
          mountPath: /etc/config
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
      volumes:
      - name: prow-config
        configMap:
          name: prow-config
      nodeSelector:
        cloud.google.com/gke-nodepool: prow
