manifests/prow/components/sinker_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: "sinker"
      containers:
      - name: sinker
        args:
        - --config-path=/etc/config/config.yaml
        - --dry-run=false
        image: gcr.io/k8s-prow/sinker:v20190607-8a7f32bfd
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      nodeSelector:
        cloud.google.com/gke-nodepool: prow
