manifests/prow/components/1c_hook_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hook
  name: hook
spec:
  selector:
    app: hook
  ports:
  - name: main
    port: 8888
  type: NodePort
