manifests/prow/components/2c_deck_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deck
  name: deck
spec:
  selector:
    app: deck
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: NodePort
