manifests/prow/components/3c_hook_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: hook
spec:
  selector:
    app: hook
  ports:
  - port: 8888
  type: NodePort
